@@ -1,3 +1,10 @@
+2006-10-06  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* mpd-show.c: + name->state was not changed after error
+	+ DEFAULT_FORMAT altered
+
+	* tv: + downloads programm for only one day instead of two
+
 2006-10-02  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* gz2bz: + bug fixed when GZIP environment variable was set
